<?php

namespace App\Models;

use App\Enums\PaymentMethod;
use App\Enums\PaymentStatus;
use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\BelongsTo;

class Payment extends Model
{
    protected $fillable = ['booking_id', 'method', 'amount', 'status', 'reference', 'proof_path', 'verified_by', 'verified_at', 'meta'];

    protected function casts(): array
    {
        return [
            'method' => PaymentMethod::class,
            'status' => PaymentStatus::class,
            'amount' => 'decimal:2',
            'verified_at' => 'datetime',
            'meta' => 'array',
        ];
    }

    public function booking(): BelongsTo
    {
        return $this->belongsTo(Booking::class);
    }

    public function verifier(): BelongsTo
    {
        return $this->belongsTo(User::class, 'verified_by');
    }

    /** Signed-in route that streams the slip from the private disk (customer, venue owner, admin only). */
    public function proofUrl(): ?string
    {
        return $this->proof_path ? route('bookings.proof.show', [$this->booking_id ? $this->booking : null, $this]) : null;
    }
}
